# qt6_linux

./: CMakeLists.txt  Readme.md  main.cpp  main.qml  myqtapp.service  myqtapp_1.0.bb  struct.service
